crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_item_lazy_blockquote_marker_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..30
  LIST@0..10
    LIST_ITEM@0..10
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..10
        TEXT@2..3 "a"
        NEWLINE@3..4 "\n"
        LINE_PREFIX@4..6 "  "
        TEXT@6..9 "> q"
        NEWLINE@9..10 "\n"
  BLANK_LINE@10..11
    BLANK_LINE@10..11 "\n"
  LIST@11..30
    LIST_ITEM@11..30
      LIST_MARKER@11..13 "1."
      WHITESPACE@13..14 " "
      PLAIN@14..30
        TEXT@14..15 "b"
        NEWLINE@15..16 "\n"
        LINE_PREFIX@16..19 "   "
        TEXT@19..22 "> r"
        NEWLINE@22..23 "\n"
        LINE_PREFIX@23..26 "   "
        TEXT@26..29 "> s"
        NEWLINE@29..30 "\n"
