crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_item_overindented_fence_interrupts_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..23
  LIST@0..23
    LIST_ITEM@0..23
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..4
        TEXT@2..3 "a"
        NEWLINE@3..4 "\n"
      CODE_BLOCK@4..23
        LINE_PREFIX@4..6 "  "
        WHITESPACE@6..7 " "
        CODE_FENCE_OPEN@7..11
          CODE_FENCE_MARKER@7..10 "```"
          NEWLINE@10..11 "\n"
        CODE_CONTENT@11..16
          LINE_PREFIX@11..13 "  "
          TEXT@13..15 " c"
          NEWLINE@15..16 "\n"
        LINE_PREFIX@16..18 "  "
        CODE_FENCE_CLOSE@18..23
          WHITESPACE@18..19 " "
          CODE_FENCE_MARKER@19..22 "```"
          NEWLINE@22..23 "\n"
