crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_item_overindented_fence_is_lazy_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..23
  LIST@0..23
    LIST_ITEM@0..23
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..23
        TEXT@2..3 "a"
        NEWLINE@3..4 "\n"
        LINE_PREFIX@4..6 "  "
        TEXT@6..7 " "
        INLINE_CODE@7..22
          INLINE_CODE_MARKER@7..10 "```"
          INLINE_CODE_CONTENT@10..11 "\n"
          LINE_PREFIX@11..13 "  "
          INLINE_CODE_CONTENT@13..16 " c\n"
          LINE_PREFIX@16..18 "  "
          INLINE_CODE_CONTENT@18..19 " "
          INLINE_CODE_MARKER@19..22 "```"
        NEWLINE@22..23 "\n"
