crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_item_pipe_table_caption_after_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..45
  LIST@0..45
    LIST_ITEM@0..45
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PIPE_TABLE@2..45
        TABLE_HEADER@2..12
          TEXT@2..3 "|"
          WHITESPACE@3..4 " "
          TABLE_CELL@4..5
            TEXT@4..5 "a"
          WHITESPACE@5..6 " "
          TEXT@6..7 "|"
          WHITESPACE@7..8 " "
          TABLE_CELL@8..9
            TEXT@8..9 "b"
          WHITESPACE@9..10 " "
          TEXT@10..11 "|"
          NEWLINE@11..12 "\n"
        TABLE_SEPARATOR@12..24
          LINE_PREFIX@12..14 "  "
          TABLE_SEP_DELIM@14..15 "|"
          TABLE_SEP_WHITESPACE@15..16 " "
          TABLE_SEP_DASHES@16..17 "-"
          TABLE_SEP_WHITESPACE@17..18 " "
          TABLE_SEP_DELIM@18..19 "|"
          TABLE_SEP_WHITESPACE@19..20 " "
          TABLE_SEP_DASHES@20..21 "-"
          TABLE_SEP_WHITESPACE@21..22 " "
          TABLE_SEP_DELIM@22..23 "|"
          NEWLINE@23..24 "\n"
        TABLE_ROW@24..36
          LINE_PREFIX@24..26 "  "
          TEXT@26..27 "|"
          WHITESPACE@27..28 " "
          TABLE_CELL@28..29
            TEXT@28..29 "1"
          WHITESPACE@29..30 " "
          TEXT@30..31 "|"
          WHITESPACE@31..32 " "
          TABLE_CELL@32..33
            TEXT@32..33 "2"
          WHITESPACE@33..34 " "
          TEXT@34..35 "|"
          NEWLINE@35..36 "\n"
        BLANK_LINE@36..37
          BLANK_LINE@36..37 "\n"
        TABLE_CAPTION@37..45
          LINE_PREFIX@37..39 "  "
          TABLE_CAPTION_PREFIX@39..41 ": "
          TEXT@41..44 "cap"
          NEWLINE@44..45 "\n"
