crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_item_pipe_table_marker_line_blockquote_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..88
  BLOCK_QUOTE@0..20
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    LIST@2..20
      LIST_ITEM@2..20
        LIST_MARKER@2..3 "-"
        WHITESPACE@3..4 " "
        PIPE_TABLE@4..20
          TABLE_HEADER@4..10
            TABLE_CELL@4..5
              TEXT@4..5 "a"
            WHITESPACE@5..6 " "
            TEXT@6..7 "|"
            WHITESPACE@7..8 " "
            TABLE_CELL@8..9
              TEXT@8..9 "b"
            NEWLINE@9..10 "\n"
          TABLE_SEPARATOR@10..20
            BLOCK_QUOTE_MARKER@10..11 ">"
            WHITESPACE@11..12 " "
            WHITESPACE@12..14 "  "
            TABLE_SEP_DASHES@14..15 "-"
            TABLE_SEP_WHITESPACE@15..16 " "
            TABLE_SEP_DELIM@16..17 "|"
            TABLE_SEP_WHITESPACE@17..18 " "
            TABLE_SEP_DASHES@18..19 "-"
            NEWLINE@19..20 "\n"
  BLANK_LINE@20..21
    BLANK_LINE@20..21 "\n"
  BLOCK_QUOTE@21..63
    BLOCK_QUOTE_MARKER@21..22 ">"
    WHITESPACE@22..23 " "
    LIST@23..63
      LIST_ITEM@23..63
        LIST_MARKER@23..24 "-"
        WHITESPACE@24..25 " "
        PIPE_TABLE@25..63
          TABLE_HEADER@25..35
            TEXT@25..26 "|"
            WHITESPACE@26..27 " "
            TABLE_CELL@27..28
              TEXT@27..28 "x"
            WHITESPACE@28..29 " "
            TEXT@29..30 "|"
            WHITESPACE@30..31 " "
            TABLE_CELL@31..32
              TEXT@31..32 "y"
            WHITESPACE@32..33 " "
            TEXT@33..34 "|"
            NEWLINE@34..35 "\n"
          TABLE_SEPARATOR@35..49
            BLOCK_QUOTE_MARKER@35..36 ">"
            WHITESPACE@36..37 " "
            WHITESPACE@37..39 "  "
            TABLE_SEP_DELIM@39..40 "|"
            TABLE_SEP_WHITESPACE@40..41 " "
            TABLE_SEP_DASHES@41..42 "-"
            TABLE_SEP_WHITESPACE@42..43 " "
            TABLE_SEP_DELIM@43..44 "|"
            TABLE_SEP_WHITESPACE@44..45 " "
            TABLE_SEP_DASHES@45..46 "-"
            TABLE_SEP_WHITESPACE@46..47 " "
            TABLE_SEP_DELIM@47..48 "|"
            NEWLINE@48..49 "\n"
          TABLE_ROW@49..63
            BLOCK_QUOTE_MARKER@49..50 ">"
            WHITESPACE@50..51 " "
            WHITESPACE@51..53 "  "
            TEXT@53..54 "|"
            WHITESPACE@54..55 " "
            TABLE_CELL@55..56
              TEXT@55..56 "1"
            WHITESPACE@56..57 " "
            TEXT@57..58 "|"
            WHITESPACE@58..59 " "
            TABLE_CELL@59..60
              TEXT@59..60 "2"
            WHITESPACE@60..61 " "
            TEXT@61..62 "|"
            NEWLINE@62..63 "\n"
  BLANK_LINE@63..64
    BLANK_LINE@63..64 "\n"
  BLOCK_QUOTE@64..88
    BLOCK_QUOTE_MARKER@64..65 ">"
    WHITESPACE@65..66 " "
    BLOCK_QUOTE@66..88
      BLOCK_QUOTE_MARKER@66..67 ">"
      WHITESPACE@67..68 " "
      LIST@68..88
        LIST_ITEM@68..88
          LIST_MARKER@68..69 "-"
          WHITESPACE@69..70 " "
          PIPE_TABLE@70..88
            TABLE_HEADER@70..76
              TABLE_CELL@70..71
                TEXT@70..71 "a"
              WHITESPACE@71..72 " "
              TEXT@72..73 "|"
              WHITESPACE@73..74 " "
              TABLE_CELL@74..75
                TEXT@74..75 "b"
              NEWLINE@75..76 "\n"
            TABLE_SEPARATOR@76..88
              BLOCK_QUOTE_MARKER@76..77 ">"
              WHITESPACE@77..78 " "
              BLOCK_QUOTE_MARKER@78..79 ">"
              WHITESPACE@79..80 " "
              WHITESPACE@80..82 "  "
              TABLE_SEP_DASHES@82..83 "-"
              TABLE_SEP_WHITESPACE@83..84 " "
              TABLE_SEP_DELIM@84..85 "|"
              TABLE_SEP_WHITESPACE@85..86 " "
              TABLE_SEP_DASHES@86..87 "-"
              NEWLINE@87..88 "\n"
